apps/external/ollama/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: default
spec:
  type: ExternalName
  externalName: 10.47.59.4
  ports:
    - name: http
      port: 3000
      targetPort: 3000
