apps/external/ollama/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ollama
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ollama.joejad.com`)
      kind: Rule
      services:
        - name: ollama
          port: 3000
      middlewares:
        - name: default-headers
  tls:
    secretName: local-joejad-tls
